@@ -1,3 +1,6 @@
+* Thu Jun 16 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
+- Update to Puppet 4 custom function
+
 * Thu Jan 05 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
 - Removed the 'ctrl-alt-del' job since that has been moved into the 'simp'
   module
